added more buttons!

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
           <div class="row">
             <div class="text-center col-md-12">
               <p class="lead top-lead">Equipping Trailhead Church to be on mission in this community, this region and beyond.</p>
+              <a class="btn btn-large" href="CommitmentCard.pdf" target="_blank">Commitment Card</a>
+              <a class="btn btn-large" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
             </div>
           </div> <!-- /.row -->
         </div> <!-- /.container -->
@@ -398,8 +400,14 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
   </div>  
   
   <div class="row">
-        <div class="text-center box col-xs-12 col-sm-5 col-md-5 col-lg-5 panel">
-          <h3>Pray</h3>
+        <div class="text-center box col-xs-12 col-sm-4 col-md-4 col-lg-4">
+          <h2>Visit</h2>
+          <p class="justify">We would love for you to join with us as we gather on Sunday mornings to worhsip. We have services at 9am and 11am, with childcare provided at both services. <pre>101 W. Vandalia St. <br>Edwardsville, IL 62025 (<a href="https://maps.google.com/maps?ie=UTF8&cid=13221485590594205122&q=Trailhead+Church&gl=US&hl=en&t=h&ll=38.811306,-89.956527&spn=0.003344,0.00427&z=16&iwloc=A&source=embed"><i class="icon-map-marker icon-large" style="padding-right: 2px"></i>map</a>)</pre>
+          </p>
+          <a class="btn btn-large" href="http://trailheadonline.org" target="_blank">More Info</a>
+        </div>
+        <div class="text-center box col-xs-12 col-sm-4 col-md-4 col-lg-4">
+          <h2>Pray</h2>
           <p>If you would like to commit to pray for our church, please subscribe below for regular email updates:</p>
           <div id="email-subscribe">
             <div id="form-wrapper-2">
@@ -438,11 +446,12 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
           </div> <!-- /#email-subscribe -->
           <!-- <button type="button" class="btn btn-primary">Join Us in Prayer</button> -->
         </div>
-        <div class="text-center box col-xs-12 col-sm-5 col-sm-offset-2 col-md-5 col-md-offset-2 col-lg-5 col-lg-offset-2 panel">
-          <h3>Give</h3>
+        <div class="text-center box col-xs-12 col-sm-4 col-md-4 col-lg-4">
+          <h2>Give</h2>
           <p class="justify">Ministry requires resources, sacrifice, and generosity.  In this case, purchasing and renovating a historic church building is a costly undertaking, and all gifts are greatly appreciated.  Click below to financially support Trailhead Church’s endeavors.
 </p>
-          <a class="btn btn-large btn-disabled" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
+          <a class="btn btn-large" href="CommitmentCard.pdf" target="_blank">Commitment Card</a>
+          <a class="btn btn-large" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
         </div>
   </div>
   
