added wufoo commitment card

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="text-center col-md-12">
               <p class="lead top-lead">Equipping Trailhead Church to be on mission in this community, this region and beyond.</p>
-              <a class="btn btn-large" href="CommitmentCard.pdf" target="_blank">Commitment Card</a>
+              <a class="btn btn-large" href="javascript:;" data-toggle="modal" data-target="#commitmentModal">Commitment Card</a>
               <a class="btn btn-large" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
             </div>
           </div> <!-- /.row -->
@@ -450,7 +450,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
           <h2>Give</h2>
           <p class="justify">Ministry requires resources, sacrifice, and generosity.  In this case, purchasing and renovating a historic church building is a costly undertaking, and all gifts are greatly appreciated.  Click below to financially support Trailhead Church’s endeavors.
 </p>
-          <a class="btn btn-large" href="CommitmentCard.pdf" target="_blank">Commitment Card</a>
+          <a class="btn btn-large" href="javascript:;" data-toggle="modal" data-target="#commitmentModal">Commitment Card</a>
           <a class="btn btn-large" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
         </div>
   </div>
@@ -490,6 +490,28 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
+
+  <!-- Button trigger modal -->
+<!-- <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Launch demo modal
+</button> -->
+
+<!-- Modal -->
+<div class="modal fade" id="commitmentModal" role="dialog" aria-labelledby="commitmentModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      </div>
+      <div class="modal-body">
+        <iframe height="1011" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="https://trailheadonline.wufoo.com/embed/rmk7nyw08dcjuk/"><a href="https://trailheadonline.wufoo.com/forms/rmk7nyw08dcjuk/">Fill out my Wufoo form!</a></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
    
 
     <!-- Le javascript
