--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
          <li class="active"><a href="#head-top">Home</a></li>
 				  <li><a href="#Section-1">Rooted</a></li>
 				  <li><a href="#Section-2">Growing</a></li>
-				  <li><a href="#Section-3">A Foundation</a></li>
           <li><a href="#Section-4">Our Plan</a></li>
           <li><a href="#Section-5">Join Us</a></li>
     </ul>
@@ -237,9 +236,8 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <!-- / SECTION-2 -->
 
 <!-- / SECTION-3 --> 
-<section id="Section-3">
+<!-- <section id="Section-3">
   <div class="container">
-    <!-- Example row of columns -->
     <div class="row">
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="fakeicon-wrap">
@@ -285,8 +283,8 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
           </ul>
       </div>
     </div>
-  </div><!-- / CONTAINER-->
-</section>
+  </div>
+</section> -->
 <!-- / SECTION-3 --> 
 
 <!-- / SECTION-4 --> 
@@ -299,7 +297,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
       <img src="images/ourplan.png">
     </div>
       <p class="lead">
-        Our goal is to purchase and renovate the First Presbyterian building and to raise <strong>$550,000 over 3 Years</strong> through pledges from Trailhead Church’s members and friends.
+        Our goal is to purchase and renovate a building and to raise <strong>$550,000 over 3 Years</strong> through pledges from Trailhead Church’s members and friends.
       </p>
     </div> 
   </div>  
