fixed campaign page for new building

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <h3>A ROOTED PEOPLE</h3>
-        <p class="justify">While the vision for Trailhead is to equip and send God’s people to engage their communities with the gospel, the church must also be rooted in our own community. Trailhead has the opportunity to purchase and renovate the historic First Presbyterian Church here in Edwardsville to be used as a tool for mission. It will be a place where our congregation can be changed by the gospel and equipped to live in ways that glorify and proclaim Christ, where church planters can be trained and supported, and where we host events that will support the prosperity of our community and meet the needs of our neighbors.</p>
+        <p class="justify">While the vision for Trailhead is to equip and send God’s people to engage their communities with the gospel, the church must also be rooted in our own community. Trailhead is actively pursuing opportunities to purchase and renovate a historic building in downtown Edwardsville, IL. It will be a place where our congregation can be changed by the gospel and equipped to live in ways that glorify and proclaim Christ, where church planters can be trained and supported, and where we host events that will support the prosperity of our community and meet the needs of our neighbors.</p>
       </div>
       <div class="text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <a href="#"><img class="img-responsive" src="images/rooted2.png"></a> 
@@ -355,7 +355,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
       </div>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-          <h4 class="year">2014</h4>
+          <h4 class="year">2015</h4>
           <div class="row">
             <div class-"col-xs-2 col-sm-2 col-md-2 col-lg-2">
               <strong>Winter - Spring</strong>
@@ -392,7 +392,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
       <img src="images/joinus.png">
     </div>
       <p class="lead">
-        Our hope is to proclaim the gospel of Christ to our community, train and send out church planters, and purchase and renovate a historic church building. To accomplish these goals, we need help from as many sources as possible. <strong>Please consider supporting our efforts in the following ways:</strong>
+        Our hope is to proclaim the gospel of Christ to our community, train and send out church planters, and purchase and renovate a church building. To accomplish these goals, we need help from as many sources as possible. <strong>Please consider supporting our efforts in the following ways:</strong>
       </p>
     </div> 
   </div>  
@@ -539,7 +539,7 @@ jQuery(document).ready(function(){
 	//outerHeight (true/false) - Whether or not jQuery should use it's outerHeight option to determine when a section is in the viewport
   jQuery('#head-top').parallax("50%", 0.3);
 	//jQuery('#section-2').parallax("50%", 0.1);
-	jQuery('#Section-45').parallax("50%", 0.3, true);
+	// jQuery('#Section-45').parallax("50%", 0.3, true);
 
 })
 </script>
